--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -3,8 +3,9 @@ $second-color: #5fb523;
 .user-icon {
   width: 45%;
   border: #434b54 solid 3px;
-  border-radius: 100px;
+  border-radius: 50%;
   margin: 0 auto;
+  padding: 5px;
 }
 
 label {
